add explainable ai

--- a/machine learning/mackay/stirling approximation.ipynb
+++ b/machine learning/mackay/stirling approximation.ipynb
@@ -11,6 +11,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Approximating x! and (N r)\n",
+    "Mackay p2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -154,11 +163,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Similar trying\n",
+    "Binomial distribution\n",
+    "$$P(K=k) = {n \\choose k} p^k(1-p)^k \\approx \\frac{1}{\\sqrt{2 \\pi np(1-p)}}e^{-\\frac{(x-np)}{2np(1-p)}}$$\n",
+    "The problem is that lhs is a discrete pmf on k and rhs is a continous pdf on x.  \n",
+    "Possible ways: integral on each side and use the GD to approximate the summation of $P(K=k)$?"
+   ]
   },
   {
    "cell_type": "code",
@@ -184,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  5 2022, 01:53:17) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
