update chapter name

--- a/general stuff/reading/娱乐至死.md
+++ b/general stuff/reading/娱乐至死.md
@@ -63,7 +63,7 @@
 
 彼此交谈/娱乐，交流思想/图像。
 
-第7章 “好......现在”
+### 第7章 “好......现在”
 分析电视是怎么提供伪语境的：“好......现在”的话语形式，带有割裂感的音乐，内容之间短暂的时间，播音员一成不变的状态，内容之后的广告。
 
 电视内容这种安排形式对应到其他领域：达达主义，虚无主义，精神分裂症，杂耍。
@@ -75,9 +75,9 @@
 奥威尔和赫胥黎的担忧
 失去思考能力
 
-第8章
+### 第8章
 
-第11章 赫胥黎的警告
+### 第11章 赫胥黎的警告
 没有表示同意或者反对就接受了。
 技术是文化的朋友？
 
