--- a/linear algebra/Trefethen.ipynb
+++ b/linear algebra/Trefethen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,15 @@
     "plt.grid()\n",
     "plt.gca().set_aspect(\"equal\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SVD image compression, source: https://www.frankcleary.com/svdimage/"
    ]
   },
   {
