--- a/general stuff/badminton/步伐.md
+++ b/general stuff/badminton/步伐.md
@@ -1,3 +1,4 @@
+### 单打步伐
 ### 启动
 1. 为什么职业球员接球那么简单
 最重要的是启动。
@@ -15,6 +16,31 @@
 开太大用不了前脚掌,开太小没有向外的反作用力
 8. 不用启动,就跑可以吗?比如田径运动员就不启动
 不可以,田径运动员预先知道运动的方向,足球守门员,网球运动员都有启动
-9. 
+9. 什么时候启动？
+击球的时候启动。对手引拍的时候就要小跳，不能击球的时候再小跳。蹲下去很重要，但不是碰了地再蹲，而是同时的，蹲下去的时间还可以观察球的来向。
+10. 为什么会提前启动
+正常时机启动，接不到球，就提前启动，这是错误的。
+11. 真正打球时大部分都是单脚小跳，而不是双脚，除非挑的特别高。 
+12. 为什么有的人启动的时候向上跳的高？
+跳的高反作用力会强一点，基本上只有女运动员这样，而且只有在下压的时候才可以跳高一点。 
+13. 有多少种启动
+两种，前后站（进攻）和平行站（防守）
+14. 怎么练启动？
+连打开速度，可以下蹲或者不下蹲（如果来不及了）
+15. 怎么练二次启动
+点脚尖高抬腿（不用下去太多），踏步加速脚开小一点（结合左右步伐或前后走），前前后后步伐，（分解步伐训练）
+具体的步伐加启动：前后交叉走，并步，注意最后都是单脚小跳，
+静蹲，靠墙坐
 
+#### 步伐
+1. 三要素：动作，节奏，空间
+2. 哪几种动作？
+并步，交叉步，后交叉，弓箭步
+### 过渡
+1. 正手/反手过渡
+重要是不丢位置（想一下林丹的步伐），不要追球，要往后推，让出侧身的位置，
 
+### 双打步伐
+1. 有什么不一样
+90%都是平行启动
+2. 后场：杀球后原地平行启动，吊球后交叉（正手）或者并步（反手）回中场，吊的比较快也可以原地启动，关键是对准对面的击球时机
