add causal inference

--- a/general stuff/badminton/步伐.md
+++ b/general stuff/badminton/步伐.md
@@ -41,6 +41,9 @@
 重要是不丢位置（想一下林丹的步伐），不要追球，要往后推，让出侧身的位置，
 
 ### 双打步伐
+心得：每个球都要启动，无论是进攻防守，观察职业比赛会发现，两个人基本都是同步启动的。
 1. 有什么不一样
 90%都是平行启动
 2. 后场：杀球后原地平行启动，吊球后交叉（正手）或者并步（反手）回中场，吊的比较快也可以原地启动，关键是对准对面的击球时机
+3. 前场封网不要跳，拍子举到头的高度
+4. 防守步伐
