update Nietzsche git push

--- a/general stuff/reading/当尼采哭泣.md
+++ b/general stuff/reading/当尼采哭泣.md
@@ -19,3 +19,28 @@
 限制比打开可能性更让人深入一个方向。
 
 真正的问题是，我能承受多少真理？（真理是残酷的）
+
+### 第十四章
+我必须先教会你走路，而学走路的第一步就是认识到，不服从自己的人将被他人所控制。服从他人比支配自己要容易得多，要远远地容易得多。
+
+认识到无意义这件事情本身具有价值。
+了解目标的本质这件事情是一种超越。
+
+### 第十九章
+“我喜爱一种从原始的经验所雕塑出来的哲学。”
+
+我把时间花在什么东西上，是最本质的问题。
+实践是必不可少的，布雷尔的案例就是尼采哲学的实践。
+
+### 第二十章 
+“问你自己，约瑟夫，你实现了你的生命吗？”
+“约瑟夫，你在规避我的问题。你经历过你的人生吗？或者被你的人生所经历？你选择了它？或者让它选择了你？喜爱它？或者悔不当初？当我问你是否已经实现了你的生命时，那就是我的意思。你让你的人生消耗殆尽了吗？还记得那个梦吗，在里面，当某种不幸的事件降临到你的家庭，你的父亲动也不动地站着，无助地祷告？你不正像他一样？你不是无助地站在那里动也不动，为你那从未经历过的人生感到悲痛？”
+
+“约瑟夫，试着去清理你的思绪。想象这个思想实验！如果有个恶魔对你说，这个人生，你现在与过去所过的生活，你将必须再经历一次，而且是无限次数地再三反复，而且，里面不会有任何新的东西，一切痛苦与欢乐，你生命中一切难以言喻的大小事情，都会重新回到你身上，全部以相同的顺序与因果关系——这阵风与那些树，那块让你失足的泥岩，那墓地与恐惧，这温馨的一刻，你跟我把臂细语着这些话。如果这一切将再三反复，你会怎么样？”
+
+“是的，永劫回归意味着每一次你选择一个行动，你必须是愿意为整个永恒选择了它。而且，这对每一个没有做出来的行动、每一个胎死腹中的想法、每一个被避免的选择来说，亦是如此。同时，所有不被体验的生活，会继续保持塞满在你的内心里面，在整个永恒之中都不被体验。而那来自你良心中被忽视的声音，会对你永远地呐喊。”
+
+### 第二十一章
+‘选择正确的敌人。’我想那就是关键！这些年来，我一直与错误的敌人在战斗。真正的敌人一直就不是玛蒂尔德，而是宿命。真正的敌人是衰老、死亡以及我本身对自由的恐惧。我责怪玛蒂尔德不让我去面对我实际上不愿去面对的事！我怀疑，有多少个丈夫对他们的妻子做相同的事情？”
+
+“我不知道还有什么好说的，除了要感谢你之外，让我知道了生活愉快的关键，在于先去选择必要的东西，然后去热爱所选择的东西。”
