--- a/general stuff/learning/art/艺术哲学.md
+++ b/general stuff/learning/art/艺术哲学.md
@@ -5,7 +5,7 @@ intuituion
 
 近似不等于特例。
 
-基本概念存在验属性，需要想象力去理解。
+基本概念存在先验属性，需要想象力去理解。
 
 关于“美”的争端解决的方法：
 1. 无所谓，美可以被任意构建。
@@ -20,7 +20,7 @@ intuituion
 美感不以概念为基础，但仍然是普遍的。
 
 康德：人类对外部事物的感知有一种先验共通感。
-判断力是审美判断的能力（康德第三本书，知识，自由，美 （真善美））
+判断力是审美判断的能力（康德三本书，知识，自由，美 （真善美））
 
 愉悦应判断而生（审美判断），判断应预约而生（感官判断）
 
@@ -33,7 +33,7 @@ intuituion
 审美判断究竟是什么？
 马克思：感性活动，人按照美的规律（内在的尺度）来创造。
 
-美根源于人类心灵的感性自由。
+美根源于人类心灵的**感性自由**。
 
 ### 艺术实践的根据在哪？
 人类为什么要美？
@@ -42,6 +42,59 @@ intuituion
 美只有在**社会经验**中才存在。？
 美是社会的感觉，不是个体的生物感觉。
 
-审美能力是把自身情感传达给别人的能力。
+审美能力是把自身**情感**传达给别人的能力。
 
+悲剧：共鸣还是愉悦？
+
+### 艺术是人类保存情感的唯一方式
+这是在讨论作用，而不是构建。
+超验的存在适合作为出发点。
+
+科学是人对自然界认识的保存，人们怎么保存自己的情感呢？
+艺术
+
+亚里士多德的想法：艺术来源于模仿。
+摄像机，模仿？再现论
+
+我们绘画不是为了再现事物的逼真，而是为了再现事物引起的感动。
+
+要认识到情绪甚至是妄念的存在。
+
+### 审美经验中的情感显现
+用概念去描述情感，是失败的。
+不仅要有情感，情感还要显现出来。
+
+尼采：艺术的本性是酒神和太阳神同时起作用。
+
+总结：艺术既不是对现实事物的模仿，也不知是主题内心强烈情感的流溢，它是对实在的再解释，不过不是靠概念，而是靠直观，不是以思想做媒介，而是以感性的形式作媒介。
+
+静观和激情的结合-> 感性世界中的自由
+
+日常情感束缚于实体，但是在艺术作品中情感是自由的。
+
+揭示事物与人的生存的原初关联（先于理性，概念，逻辑）
+
+海德格尔：生存是对存在的领会。
+领会并不是理性的认识，而是忧虑和不安。
+
+欣赏论文和诗歌的区别：“过河拆桥”，诗歌中的词语不作为概念而存在，而是展现出事物与人的生存的远处关联。
+
+情感在西方哲学传统中是第三等级（认识，意志，情感），其重要性被忽略。
+
+通过艺术作品洞察情感的本质，而不是被其支配。
+
+### 艺术与真理
+艺术创造要主题（理论，概念）先行吗?（来源于亚里士多德）
+
+艺术是真理的原始发生。
+
+历史上艺术家的地位不高，长期是被工具化的。
+
+艺术的自律性问题：长期被其他东西当作工具，但是艺术作品中仍然可以看到真理的原始发生。
+
+（我觉得艺术作品中也有概念，不过和理性中的概念不一样。理性需要精准和普适性，目的是通过逻辑引出结论，但是艺术作品中的概念为情感服务，单独的概念不需要普适性，但是要互相配合。）
+理性框架中的概念存在极强的工具属性，而感性活动中关系更为重要。
+我希望把在理性活动和感性活动中的连接（逻辑和共鸣）联系起来，概念与概念的连接，概念与世界的连接欸，人和情感的连接，
+有意思的时候人和某些情感的连接存在单向的压迫属性，比如压抑的情感，这在福柯讨论的权力的规训中体现的尤为明显。
+这启示我们有些连接是要去改变或者规避的。
 
