update general stuff

--- a/general stuff/learning/art/艺术哲学.md
+++ b/general stuff/learning/art/艺术哲学.md
@@ -98,3 +98,11 @@ intuituion
 有意思的时候人和某些情感的连接存在单向的压迫属性，比如压抑的情感，这在福柯讨论的权力的规训中体现的尤为明显。
 这启示我们有些连接是要去改变或者规避的。
 
+海德格尔：真理是存在之无蔽，而不是存在者与我们的功利关系。（重要的是先后顺序）
+梵高画鞋子，并不是 想画鞋子的结构，而是要画农夫和大地的关系。
+
+形式主义美学把艺术工艺化了。
+
+艺术家把语境（生存世界）展示给我们看。
+
+海德格尔：少写些文章，多保护文字。
