add related content

--- a/general stuff/videos/目标.md
+++ b/general stuff/videos/目标.md
@@ -15,3 +15,5 @@
 3. 体系可以把生活的方方面面囊括进去，人成为人这个系统本身，而不是目标的追求者。
 
 对黄执中观点的讨论：相比于岁月静好的小时代，风起云涌的大时代，人们的确容易找到目标，这是因为大时代的问题影响着人的体系。举个例子，国破家亡会让对人生活的方方面面都产生直接影响，也就是说整个体系都寄托在救国的那个目标上，这个时候我们区分不出是目标还是体系在起作用。在小时代，人们无法找到能影响全局的大目标了，此时提出“体系”的概念就非常有必要了。
+
+相关内容：成长型思维，中产阶级的陷阱（革命之路），叔本华，时间管理，
