--- a/general stuff/badminton/步伐.md
+++ b/general stuff/badminton/步伐.md
@@ -26,7 +26,7 @@
 13. 有多少种启动
 两种，前后站（进攻）和平行站（防守）
 14. 怎么练启动？
-连打开速度，可以下蹲或者不下蹲（如果来不及了）
+练打开速度，可以下蹲或者不下蹲（如果来不及了）
 15. 怎么练二次启动
 点脚尖高抬腿（不用下去太多），踏步加速脚开小一点（结合左右步伐或前后走），前前后后步伐，（分解步伐训练）
 具体的步伐加启动：前后交叉走，并步，注意最后都是单脚小跳，
