--- a/general stuff/badminton/比赛 & 训练/训练分析.md
+++ b/general stuff/badminton/比赛 & 训练/训练分析.md
@@ -3,7 +3,7 @@
 观察：
 对面女生上网那么快，意味着它会在对面被动的时候往前上，所以要吊对角
 女生站的前，要拨腰，不仅仅是接发球，后场抽挡也是
-发现对面接发会播女生两边之后要改到发中间
+发现对面接发会拨女生两边之后要改到发中间
 
 需要加强的训练：
 中场起跳拦截正手区杀球：双脚垫一步然后杀球
