--- a/general stuff/reading/大脑通信员.md
+++ b/general stuff/reading/大脑通信员.md
@@ -1,6 +1,10 @@
 ### 介绍
 各种神经递质之间是相互合作，相互影响的。
 
+### 我的问题
+大脑为什么会疲惫？
+
+
 ### 多巴胺
 三个通路：
 1. 黑质纹状体通路，黑质-〉纹状体，负责自主运动的调节和控制。黑痣细胞成片死亡会导致帕金森
@@ -13,12 +17,30 @@
 我的理解：正常途径下和奖励预测误差相关，还可以利用药物（比如毒品）
 意外之喜：也许目标越明确，反而更容易得到意外之喜
 
-多巴胺和快乐的关系：我的理解是快乐更为复杂，多巴胺会激活奖励通路，导致奖励更容易被大脑感知到，而奖励和快乐挂钩。
+多巴胺和快乐的关系：我的理解是快乐更为复杂，多巴胺会激活奖励通路，导致奖励更容易被大脑感知到（“预期”能力），而奖励和快乐挂钩。
+
 
 ### 血清素
 大脑低血清素含量和不开心，失眠相关。但是血清素的具体作用原理还不知道。
-大部分抗抑郁药物的目的是提高血清素含量。
+大部分抗抑郁药物的目的是提高血清素含量（效果没有GABA快）
 碳水的重要性：摄入碳水后人体产生的胰岛素有助于色氨酸通过血脑屏障，而色氨酸是血清素的原料。
+猜想：多巴胺是奖励预测误差，血清素是惩罚预测误差（惩罚指的是令人不愉悦的刺激，我理解为低于预期的刺激）
 
+### 去甲肾上腺素
+多巴胺是奖励的意外性，血清素是惩罚的意外性，而去甲状腺素是信息的意外性。
+信息就是指你的预期，去甲状腺素对应到“意料之外的不确定事件”
+
+### 谷氨酸
+通用的兴奋性神经递质
+谷氨酸和长时记忆的加强和减弱都有关系
+我的理解：
+1. 长时记忆要形成，相关神经元的激活需要足够的次数和强度。
+2. 主动思考的时候：其实会增加相关神经元激活的次数，被动接受的时候跑通一次就可以了。
+
+### GABA 
+通用的抑制性神经递质，读作“盖巴”
+酒精和一些抗抑郁药物通过提高GABA受体的工作效率来起到镇静和缓解焦虑的作用，效果比提高血清素含量的药物快，不过大脑的奖励通路也有GABA受体，刺激相关神经元释放多巴胺后会成瘾。
+
+我的理解：焦虑是因为某些神经元过于兴奋
 
 
