--- a/general stuff/reading/大脑通信员.md
+++ b/general stuff/reading/大脑通信员.md
@@ -4,6 +4,9 @@
 ### 我的问题
 大脑为什么会疲惫？
 
+我的猜想：神经回路的抑制性活动也需要消耗能量，如果一个场景需要人去不断抑制刚兴奋的回路，或者是不断切换兴奋的回路，就会感到疲惫。
+例子：碎片化的信息（切换），无聊的电视剧（抑制）
+对于无聊电视剧的例子而言，大脑活跃程度低不一定代表消耗能量少，因为抑制也需要能量。
 
 ### 多巴胺
 三个通路：
@@ -34,7 +37,7 @@
 通用的兴奋性神经递质
 谷氨酸和长时记忆的加强和减弱都有关系
 我的理解：
-1. 长时记忆要形成，相关神经元的激活需要足够的次数和强度。
+1. 长时记忆要形成，相关神经元的激活需要足够的次数和强度。例子：玩魔方
 2. 主动思考的时候：其实会增加相关神经元激活的次数，被动接受的时候跑通一次就可以了。
 
 ### GABA 
@@ -42,5 +45,17 @@
 酒精和一些抗抑郁药物通过提高GABA受体的工作效率来起到镇静和缓解焦虑的作用，效果比提高血清素含量的药物快，不过大脑的奖励通路也有GABA受体，刺激相关神经元释放多巴胺后会成瘾。
 
 我的理解：焦虑是因为某些神经元过于兴奋
+
+### 内啡肽
+真正的快乐物质（实际上快乐非常复杂）
+“内源吗啡”，有镇定和产生愉悦感的效果
+长时间有氧耗尽肌肉内糖原之后，就会促进脑内内啡肽分泌，
+吃辣也会促进内啡肽
+
+多巴胺代表渴望，而内啡肽代表安宁，前者短暂，人需要高频的欲望刺激去维持，而后者长久，但是分泌的前提更难。
+
+我的理解：两者在作用机理上一定有互相影响的部分，也许是内啡肽促进多巴胺形成，但是多巴胺不一定保证内啡肽形成
+书里写：内啡肽抑制GABA，而GABA是无差别的抑制性神经递质，从而内啡肽间接促进多巴胺
+
 
 
